Add arabic to the CTA

--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -5,7 +5,7 @@
   "app.components.AboutPageComponents.faqHeader": "You still have questions?",
   "app.components.AboutPageComponents.header": "This is the AboutPageComponents component !",
   "app.components.AboutPageComponents.inspiration": "# INSPIRATION\nThis toolbox was inspired by the [Beautiful Trouble book and website](http://beautifultrouble.org/). The scope has been expanded to involve a more diverse group of activists as both makers and users of the toolkit.",
-  "app.components.AboutPageComponents.ipsum": "",
+  "app.components.AboutPageComponents.ipsum": "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariaturSed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima",
   "app.components.AboutPageComponents.ourAdvisoryNetworkHeader": "WHO’S IN OUR ADVISORY NETWORK?",
   "app.components.AboutPageComponents.ourProcessHeader": "HOW DID WE MAKE THE TOOLBOX?",
   "app.components.AboutPageComponents.ourTeamHeader": "WHO’S ON OUR TEAM?",
@@ -16,6 +16,7 @@
   "app.components.AboutPageComponents.realization": "# REALIZATION\nEarly prototypes evolved into multiple iterations of what’s currently a [game](https://beautifulrising.org/platforms/game), [chatbot](https://beautifulrising.org/platforms/chatbot), and website. With your help, the content and the form will continue to evolve!",
   "app.components.AboutPageComponents.theToolboxHeader": "What's inside the toolbox?",
   "app.components.Body.header": "This is the Body component !",
+  "app.components.ContinentIcon.header": "This is the ContinentIcon component !",
   "app.components.ContributeMenu.header": "Contribute",
   "app.components.ContributeMenu.howItWorks": "How does it work?",
   "app.components.ContributeType.callToAction": "[GO TO FORM](https://docs.google.com/forms/d/e/1FAIpQLSeC_EdxoO7owVnL8fjSERZlychwMhDOR-7rI1SDtpL4ijZgkg/viewform)",
@@ -106,6 +107,7 @@
   "app.components.ToolsComponents.header": "This is the ToolsComponents component !",
   "app.components.ToolsPotentialRisk.potentialRiskHeader": "Potential Risks",
   "app.components.ToolsRequestTraining.requestTraining": "You can also [request]({form}) a Beautiful Rising training",
+  "app.components.ToolsRequestTraining.trainingForm": "https://docs.google.com/forms/d/e/1FAIpQLSfbN0Qb5P2ORCHYl4UPEdA-01I-ixPP9TRjEFv5c05HGguwrA/viewform",
   "app.components.TrainingMenu.header": "Training + Resources",
   "app.components.TrainingMenu.otherResources": "Other Resources",
   "app.components.TrainingMenu.requestTraining": "Request a Training",
@@ -182,6 +184,8 @@
   "app.containers.Tools.header": "This is Tools container !",
   "app.containers.Tools.myTools": "My Tools",
   "app.containers.Tools.newsFeed": "News Feed",
+  "app.containers.Tools.pdfCTA": "Download PDF",
+  "app.containers.Tools.pdfHeader": "Download PDF",
   "app.containers.Tools.pdfSpiel": "Click the button below to download a PDF version of your chosen tools",
   "app.containers.Tools.remove": "Remove",
   "app.containers.Tools.share": "share",
