--- a/app/translations/es.json
+++ b/app/translations/es.json
@@ -16,6 +16,7 @@
   "app.components.AboutPageComponents.realization": "# Realización\nLos prototipos previos evolucionaron hasta convertirse actualmente en: un [*juego*](/platforms/game), un [*bot de charla*](/platforms/chatbot) y una página web. ¡Con tu ayuda, el contenido y la forma podrán seguir evolucionando!",
   "app.components.AboutPageComponents.theToolboxHeader": "LA CAJA DE HERRAMIENTAS",
   "app.components.Body.header": "This is the Body component !",
+  "app.components.ContinentIcon.header": "",
   "app.components.ContributeMenu.header": "CONTRIBUIR",
   "app.components.ContributeMenu.howItWorks": "¿CÓMO PUEDO CONTRIBUIR?",
   "app.components.ContributeType.callToAction": "[IR AL FORMULARIO](https://docs.google.com/forms/d/e/1FAIpQLSeC_EdxoO7owVnL8fjSERZlychwMhDOR-7rI1SDtpL4ijZgkg/viewform)",
@@ -106,6 +107,7 @@
   "app.components.ToolsComponents.header": "This is the ToolsComponents component !",
   "app.components.ToolsPotentialRisk.potentialRiskHeader": "Potential Risks",
   "app.components.ToolsRequestTraining.requestTraining": "También puedes [solicitar]({form}) una capacitación de Bella Rebeldía",
+  "app.components.ToolsRequestTraining.trainingForm": "",
   "app.components.TrainingMenu.header": "CAPACITACIÓN + RECURSOS",
   "app.components.TrainingMenu.otherResources": "OTROS RECURSOS",
   "app.components.TrainingMenu.requestTraining": "SOLICITA UNA CAPACITACIÓN",
@@ -127,9 +129,9 @@
   "app.containers.ContributePage.header": "CONTRIBUIR",
   "app.containers.ContributePage.typeOfContent": "¿QUÉ TIPO DE CONTENIDO TE GUSTARÍA CONTRIBUIR?",
   "app.containers.EmailTools.complete": "",
-  "app.containers.EmailTools.header": "",
-  "app.containers.EmailTools.instruction": "",
-  "app.containers.EmailTools.submit": "",
+  "app.containers.EmailTools.header": "Enviarlo por correo electrónico",
+  "app.containers.EmailTools.instruction": "Ingrese su correo electrónico y le enviaremos estas herramientas",
+  "app.containers.EmailTools.submit": "Enviar",
   "app.containers.EmptyToolsMessage.header": "Puedes guardar tus módulos de referencia aquí, de forma que la próxima vez que accedas a la caja de herramientas no tengas que buscarlos de nuevo.",
   "app.containers.EmptyToolsMessage.instruction": "Pulsa el {icon} para guardar aquí tus herramientas favoritas (no tienes que iniciar sesión; tu lista estará aquí la próxima vez que accedas desde el mismo dispositivo).",
   "app.containers.HomePage.clearSearch": "",
@@ -182,7 +184,9 @@
   "app.containers.Tools.header": "This is Tools container !",
   "app.containers.Tools.myTools": "MIS HERRA-MIENTAS",
   "app.containers.Tools.newsFeed": "CANAL DE NOTICIAS",
-  "app.containers.Tools.pdfSpiel": "",
+  "app.containers.Tools.pdfCTA": "Descargar un PDF",
+  "app.containers.Tools.pdfHeader": "Descargar un PDF",
+  "app.containers.Tools.pdfSpiel": "Haga clic en el enlace para descargar un PDF de las herramientas seleccionadas.",
   "app.containers.Tools.remove": "Eliminar",
   "app.containers.Tools.share": "compartir",
   "app.containers.ToolsSortOptions.alphabeticalButton": "Alfabético",
