--- a/app/translations/fr.json
+++ b/app/translations/fr.json
@@ -16,6 +16,7 @@
   "app.components.AboutPageComponents.realization": "",
   "app.components.AboutPageComponents.theToolboxHeader": "",
   "app.components.Body.header": "",
+  "app.components.ContinentIcon.header": "",
   "app.components.ContributeMenu.header": "",
   "app.components.ContributeMenu.howItWorks": "",
   "app.components.ContributeType.callToAction": "",
@@ -106,6 +107,7 @@
   "app.components.ToolsComponents.header": "",
   "app.components.ToolsPotentialRisk.potentialRiskHeader": "",
   "app.components.ToolsRequestTraining.requestTraining": "",
+  "app.components.ToolsRequestTraining.trainingForm": "",
   "app.components.TrainingMenu.header": "",
   "app.components.TrainingMenu.otherResources": "",
   "app.components.TrainingMenu.requestTraining": "",
@@ -182,6 +184,8 @@
   "app.containers.Tools.header": "",
   "app.containers.Tools.myTools": "",
   "app.containers.Tools.newsFeed": "",
+  "app.containers.Tools.pdfCTA": "",
+  "app.containers.Tools.pdfHeader": "",
   "app.containers.Tools.pdfSpiel": "",
   "app.containers.Tools.remove": "",
   "app.containers.Tools.share": "",
