--- a/app/translations/fr.json
+++ b/app/translations/fr.json
@@ -158,6 +158,7 @@
   "app.containers.SubmitRealWorldExample.submit": "",
   "app.containers.SubmitRealWorldExample.title": "",
   "app.containers.SubmitRealWorldExample.url": "",
+  "app.containers.Tags.clearTags": "",
   "app.containers.Tags.header": "",
   "app.containers.ToolPage.addTool": "",
   "app.containers.ToolPage.contributedByHeader": "",
