--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -139,12 +139,12 @@
   "app.containers.HomePage.methodology": "منهجية",
   "app.containers.HomePage.principle": "مبدأ",
   "app.containers.HomePage.searchResults": "نتائج البحث الخاصة بـ {label}",
-  "app.containers.HomePage.sortBy": "طريقة العرض",
+  "app.containers.HomePage.sortBy": "ترتيب حسب",
   "app.containers.HomePage.story": "قصة",
   "app.containers.HomePage.tactic": "تكتيك",
   "app.containers.HomePage.tags": "شعارات",
   "app.containers.HomePage.theory": "نظرية",
-  "app.containers.HomePage.viewAs": "عرض كـ",
+  "app.containers.HomePage.viewAs": "طريقة العرض",
   "app.containers.NewsFeed.follow": "متابعة",
   "app.containers.NewsFeed.header": "إننا نقدم هاشتاجات إخبارية متنوعة مرتبطة بحملات و تحركات مختلفة حول العالم لإبقائك على تواصل مع ما يحدث.",
   "app.containers.PlatformsPage.header": "المنصات",
