--- a/app/translations/es.json
+++ b/app/translations/es.json
@@ -103,7 +103,7 @@
   "app.components.ToolTypeArea.theoriesLong": "“No hay nada tan práctico como una buena teoría” (George Lakey) ¿Alguna vez has deseado que alguien tomara las ideas más importantes de pensadores revolucionarios como Paulo Freire, Arundhati Roy y Antonio Gramsci y las organizara en píldoras teóricas efectivas y accesibles, ajustadas a las necesidades pragmáticas de los alborotadores comunes y corrientes? No busques más.",
   "app.components.ToolTypeSelectedFull.header": "This is the ToolTypeSelectedFull component !",
   "app.components.ToolTypeSelectedPartial.header": "This is the ToolTypeSelectedPartial component !",
-  "app.components.ToolWhyItFailed.header": "",
+  "app.components.ToolWhyItFailed.header": "Por qué falló",
   "app.components.ToolsComponents.header": "This is the ToolsComponents component !",
   "app.components.ToolsPotentialRisk.potentialRiskHeader": "Potential Risks",
   "app.components.ToolsRequestTraining.requestTraining": "También puedes [solicitar]({form}) una capacitación de Bella Rebeldía",
@@ -114,6 +114,7 @@
   "app.components.TypeFlagTooltip.header": "",
   "app.components.TypeMenu.header": "This is the TypeMenu component !",
   "app.components.TypeMenu.stories": "Historias",
+  "app.components.WhyItWorked.header": "Por qué funcionó",
   "app.containers.AboutPage.description": "En Bella Rebeldía utilizamos los conocimientos de personas generadoras de cambio de todo el mundo para que nuestros movimientos sean más estratégicos, creativos y efectivos.",
   "app.containers.AboutPage.header": "ACERCA DEL PROYECTO",
   "app.containers.AskTheContributor.emailPlaceholder": "",
