--- a/app/translations/fr.json
+++ b/app/translations/fr.json
@@ -114,6 +114,7 @@
   "app.components.TypeFlagTooltip.header": "",
   "app.components.TypeMenu.header": "",
   "app.components.TypeMenu.stories": "",
+  "app.components.WhyItWorked.header": "",
   "app.containers.AboutPage.description": "",
   "app.containers.AboutPage.header": "",
   "app.containers.AskTheContributor.emailPlaceholder": "",
