Show translation needed if items in the page needs translation

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -167,6 +167,7 @@
   "app.containers.ToolPage.learnMore": "",
   "app.containers.ToolPage.methodologies": "منهجيات",
   "app.containers.ToolPage.methodology": "منهجية",
+  "app.containers.ToolPage.needsTranslationForm": "https://docs.google.com/forms/d/e/1FAIpQLSdNIM8BZK8PBPRaMwcHe8vQPaq82xtsPkloav5qNAzDeEwHHA/viewform",
   "app.containers.ToolPage.principle": "مبدأ",
   "app.containers.ToolPage.principles": "مبادئ",
   "app.containers.ToolPage.realWorldExamplesOf": "أمثلة العالم الحقيقي من {title}",
@@ -183,6 +184,7 @@
   "app.containers.ToolPage.theories": "نظريات",
   "app.containers.ToolPage.theory": "نظرية",
   "app.containers.ToolPage.trainingHeader": "تدريب",
+  "app.containers.ToolPage.translationNeeded": "لم يتم ترجمة هذه الوحدة للغة العربية بعد. اضغط/ي [هنا]({link}) لقرأة الوحدة باللغة الانجليزية. تمت ترجمة موقع النضال الجميل من قبل متطوعين. اذا كانت لديك رغبة في ترجمة هذه الوحدة، نرجو منك إما تعبئة [هذا النموذج]({form}) أو إرسال نص الترجمة المقترح ل: info@beautifulrising.org . شكراً!",
   "app.containers.Tools.header": "",
   "app.containers.Tools.myTools": "أدواتي",
   "app.containers.Tools.newsFeed": "التغذية الإخبارية",
