--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -167,6 +167,7 @@
   "app.containers.ToolPage.learnMore": "Learn More",
   "app.containers.ToolPage.methodologies": "Methodologies",
   "app.containers.ToolPage.methodology": "Methodology",
+  "app.containers.ToolPage.needsTranslationForm": "https://docs.google.com/forms/d/e/1FAIpQLSdNIM8BZK8PBPRaMwcHe8vQPaq82xtsPkloav5qNAzDeEwHHA/viewform",
   "app.containers.ToolPage.principle": "Principle",
   "app.containers.ToolPage.principles": "Principles",
   "app.containers.ToolPage.realWorldExamplesOf": "Real World Examples of \"{title}\"",
@@ -183,6 +184,7 @@
   "app.containers.ToolPage.theories": "Theories",
   "app.containers.ToolPage.theory": "Theory",
   "app.containers.ToolPage.trainingHeader": "Training",
+  "app.containers.ToolPage.translationNeeded": "This tool has not yet been translated into English. Click [here]({link}) to read the original. Beautiful Rising is translated by volunteers. If you are interested in translating this tool, please fill out [this form]({form}), or send your translation to info@beautifulrising.org. Thanks!",
   "app.containers.Tools.header": "This is Tools container !",
   "app.containers.Tools.myTools": "My Tools",
   "app.containers.Tools.newsFeed": "News Feed",
