--- a/app/translations/es.json
+++ b/app/translations/es.json
@@ -167,6 +167,7 @@
   "app.containers.ToolPage.learnMore": "APRENDER MÁS",
   "app.containers.ToolPage.methodologies": "METODOLOGÍAS",
   "app.containers.ToolPage.methodology": "METODOLOGÍA",
+  "app.containers.ToolPage.needsTranslationForm": "https://docs.google.com/forms/d/e/1FAIpQLSdNIM8BZK8PBPRaMwcHe8vQPaq82xtsPkloav5qNAzDeEwHHA/viewform",
   "app.containers.ToolPage.principle": "PRINCIPIO",
   "app.containers.ToolPage.principles": "PRINCIPIOS",
   "app.containers.ToolPage.realWorldExamplesOf": "EJEMPLOS DEL MUNDO REAL SOBRE {title}",
@@ -183,6 +184,7 @@
   "app.containers.ToolPage.theories": "TEORÍAS",
   "app.containers.ToolPage.theory": "TEORÍA",
   "app.containers.ToolPage.trainingHeader": "Formación",
+  "app.containers.ToolPage.translationNeeded": "Está herramienta todavía no ha sido traducida al Español. Haz click [aquí]({link}) para leerlo en Inglés. Bella Rebeldía es traducido por voluntari@s. Si estás interesad@ en traducir esta herramienta, por favor completa [este formulario]({form}), o manda tu traducción a info@beautifulrising.org. ¡Gracias!",
   "app.containers.Tools.header": "This is Tools container !",
   "app.containers.Tools.myTools": "MIS HERRA-MIENTAS",
   "app.containers.Tools.newsFeed": "CANAL DE NOTICIAS",
