--- a/app/translations/fr.json
+++ b/app/translations/fr.json
@@ -167,6 +167,7 @@
   "app.containers.ToolPage.learnMore": "",
   "app.containers.ToolPage.methodologies": "",
   "app.containers.ToolPage.methodology": "",
+  "app.containers.ToolPage.needsTranslationForm": "",
   "app.containers.ToolPage.principle": "",
   "app.containers.ToolPage.principles": "",
   "app.containers.ToolPage.realWorldExamplesOf": "",
@@ -183,6 +184,7 @@
   "app.containers.ToolPage.theories": "",
   "app.containers.ToolPage.theory": "",
   "app.containers.ToolPage.trainingHeader": "",
+  "app.containers.ToolPage.translationNeeded": "",
   "app.containers.Tools.header": "",
   "app.containers.Tools.myTools": "",
   "app.containers.Tools.newsFeed": "",
