Enable logo in pt.json
Is there any reason this was done in this way? A symlink to en-logo.png
called pt-logo.png would work as well.

--- a/app/translations/pt.json
+++ b/app/translations/pt.json
@@ -26,11 +26,11 @@
   "app.components.Header.aboutLink": "About",
   "app.components.Header.header": "BeautifulRising",
   "app.components.Header.homeLink": "Home",
-  "app.components.Header.logo": "en",
+  "app.components.Header.logo": "pt",
   "app.components.IconButton.header": "This is the IconButton component !",
   "app.components.Link.header": "This is the Link component !",
   "app.components.Logo.header": "This is the Logo component !",
-  "app.components.Logo.language": "en",
+  "app.components.Logo.language": "pt",
   "app.components.Menu.advisoryNetMenu": "Our Advisory Network",
   "app.components.Menu.btaaMenu": "Beautiful Trouble + AA",
   "app.components.Menu.faqMenu": "FAQ",
